# salesforce-org-mcp

./: Dockerfile  README.md  pyproject.toml
.github/workflows/: deploy.yml
src/salesforce_org_mcp/: __main__.py
